# IntelliFlow-CRM

./: .browserslistrc  .depcheckrc  .dependency-cruiser.cjs  .dockerignore  .env.development  .env.example  .env.local.example  .env.test  .eslintrc.js  .gitguardian.yaml  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  .semgrepignore  AGENTS.md  CLAUDE.md  CUserstalysAppDataLocalTempclaudeC--Users-talys-projects-intelliFlow-CRM0dfca401-0806-4243-b346-bcb70fff47d3scratchpadknip-exports.json  CUserstalysAppDataLocalTempclaudeknip-exports.json  GEMINI.md  PARALLEL-C-INDEX.md  PARALLEL-C-QUICKSTART.md  PLANNING_ANALYSIS.md  QUICK-START.md  README.md  SECURITY.md  SETUP.md  Sprint_plan.csv  Sprint_plan.json  TASK_COMPLETION_ERROR_WIRING.md  TRPC_QUICKSTART.md  VALIDATION.md  audit-cutover.yml  audit-matrix.yml  cleanup-tmpclaude.ps1  docker-compose.ollama.yml  docker-compose.sonarqube.yml  docker-compose.yml  eslint.config.mjs  intelliflow-dynamic-crm.html  (+16 more)
tools/plan/: CLAUDE.md  README.md  pyproject.toml
tools/plan/src/: __init__.py
tools/plan/src/adapters/: __init__.py  cli.py  csv_repository.py  json_writer.py  yaml_loader.py
tools/plan/src/application/: __init__.py  lint_plan.py  migrate_schema.py
tools/plan/src/domain/: __init__.py  debt.py  dependency_graph.py  task.py  validation_rules.py
tools/plan/tests/: __init__.py
tools/plan/tests/fixtures/: plan_with_cross_sprint.csv  plan_with_cycle.csv  sample_plan.csv
tools/plan/tests/integration/: __init__.py  test_cli.py
tools/plan/tests/unit/: __init__.py  test_dependency_graph.py  test_task.py
(+9438 files in other folders)
